src/glm_globals.h

!+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

 INTERFACE

     SUBROUTINE set_c_wqvars_ptr(iwqvars) BIND(C, name="set_c_wqvars_ptr")
        USE ISO_C_BINDING
#       if defined( _WIN32 ) && USE_DL_LOADER
        AED_REAL,INTENT(in) :: iwqvars(*)
     END SUBROUTINE set_c_wqvars_ptr

     SUBROUTINE set_c_wqsvars_ptr(iwqsvars) BIND(C, name="set_c_wqsvars_ptr")
        USE ISO_C_BINDING
        AED_REAL,INTENT(in) :: iwqsvars(*)
     END SUBROUTINE set_c_wqsvars_ptr

     SUBROUTINE set_c_wqdvars_ptr(iwqdvars,iwqdsvars,nwqd,nwqds) BIND(C, name="set_c_wqdvars_ptr")
        USE ISO_C_BINDING
#       if defined( _WIN32 ) && USE_DL_LOADER
        AED_REAL,INTENT(in) :: iwqdvars(*)
        AED_REAL,INTENT(in) :: iwqdsvars(*)
        CINTEGER,INTENT(in) :: nwqd
        CINTEGER,INTENT(in) :: nwqds
     END SUBROUTINE set_c_wqdvars_ptr

     SUBROUTINE set_c_ptmstat_ptr(iptms) BIND(C, name="set_c_ptmstat_ptr")
        USE ISO_C_BINDING
#       if defined( _WIN32 ) && USE_DL_LOADER
        CINTEGER,INTENT(in) :: iptms(*)
     END SUBROUTINE set_c_ptmstat_ptr

     SUBROUTINE set_c_ptmenv_ptr(iptmv) BIND(C, name="set_c_ptmenv_ptr")
        USE ISO_C_BINDING
#       if defined( _WIN32 ) && USE_DL_LOADER
        AED_REAL,INTENT(in) :: iptmv(*)
     END SUBROUTINE set_c_ptmenv_ptr

     SUBROUTINE set_c_num_ptm_vars(n) BIND(C, name="set_c_num_ptm_vars")
        USE ISO_C_BINDING
        CINTEGER,INTENT(in) :: n
     END SUBROUTINE set_c_num_ptm_vars

# if DEBUG
     SUBROUTINE debug_print_lake() BIND(C, name="debug_print_lake")
     END SUBROUTINE debug_print_lake

     SUBROUTINE debug_initialisation(which) BIND(C, name="debug_initialisation_")
        USE ISO_C_BINDING
        CINTEGER,INTENT(in) :: which
     END SUBROUTINE debug_initialisation
# endif
/*----------------------------------------------------------------------------*/
// SURFACE
extern SurfaceDataType SurfData; //# Surface Data
extern MetDataType MetData;      //# Meteorological data
extern int      n_sed_layers;
extern ParticleDataType *Particle;
extern AED_REAL timestep;
extern AED_REAL yearday;   //# day of year
/*----------------------------------------------------------------------------*/
// C-Fortran shared (see glm_types.F90
extern CINTEGER MaxLayers;   //# Maximum number of layers in this sim
extern LakeDataType *Lake;
extern CINTEGER  n_zones;    //# number of sediment zones
extern ZoneType *theZones;
//extern C_PTR pMetData;
//extern C_PTR pSurfData;

//extern LakeDataType theLake;
//extern MetDataType MetData;
//extern SurfaceDataType SurfData;
//extern ZoneType theZones;

extern FLOGICAL mobility_off;
extern FLOGICAL bioshade_feedback;
extern FLOGICAL repair_state;
extern FLOGICAL do_plots;
extern FLOGICAL link_rain_loss;
extern FLOGICAL link_solar_shade;
extern FLOGICAL link_bottom_drag;
extern FLOGICAL ice;
extern CINTEGER split_factor;
extern CINTEGER ode_method;
extern CINTEGER benthic_mode;
extern AED_REAL rain_factor;
extern AED_REAL sw_factor;
extern AED_REAL friction;
extern AED_REAL Kw;
extern AED_REAL dt;
extern AED_REAL Longitude;
extern AED_REAL Latitude;