src/glm_types.h

/******************************************************************************/

/*============================================================================*/
//TYPE DECLARATIONS

   /*===========================================================*/
   typedef struct StringT {
       int  Len;
       char S[40];
   } StringT;
   /*===========================================================*/
   // Structured type for key global lake environmental vars
   // A Lake will be an allocated array of MaxLayers of these
   typedef struct LakeDataType {
       AED_REAL Density;         // Density kg/m3
       AED_REAL Temp;            // temperature
       AED_REAL Salinity;        // salinity
       AED_REAL Height;          // 1-D depth array
       AED_REAL MeanHeight;      // Mean depth of a layer
       AED_REAL LayerVol;        // volume of layer
       AED_REAL LayerArea;       // area of layer

       AED_REAL Light;           // solar radiation over water layer depths
       AED_REAL ExtcCoefSW;      // light extinction coefficient

       AED_REAL Vol1;            // Cumulative volume to this layer top
       AED_REAL Epsilon;         // Diffusivity

       AED_REAL Umean;           // Mean velocity
       AED_REAL Uorb;            // Maximum orbital velocity
       AED_REAL LayerStress;     // Layer Stress
   } LakeDataType;
   /*===========================================================*/
   // Structured type for Met vars
   typedef struct MetDataType {
       AED_REAL Rain;            // raindfall
       AED_REAL RelHum;          // relative humidty
       AED_REAL SatVapDef;       // vapour pressure
       AED_REAL LongWave;        // longwave radiation
       AED_REAL ShortWave;       // shortwave radiation
       AED_REAL AirTemp;         // temperature
       AED_REAL AirPres;         // air pressure
       AED_REAL WindSpeed;       // windspeed
       AED_REAL Snow;            // snowdfall
       AED_REAL RainConcPO4;     // Concentration of PO4 in rain
       AED_REAL RainConcTp;      // Concentration of TP in rain
       AED_REAL RainConcNO3;     // Concentration of NO3 in rain
       AED_REAL RainConcNH4;     // Concentration of NH4 in rain
       AED_REAL RainConcTn;      // Concentration of TN in rain
       AED_REAL RainConcSi;      // Concentration of SI in rain
       AED_REAL WindDir;         // Wind direction
       AED_REAL As;              // Area of sheltering
   } MetDataType;
   /*===========================================================*/
   // Structured type for Surface Data vars
   typedef struct SurfaceDataType {
       AED_REAL Evap;            // Evaporation
       AED_REAL delzBlueIce;     // Thickness of blue ice layer
       AED_REAL delzWhiteIce;    // Thickness of white ice layer
       AED_REAL delzSnow;        // Thickness of snow layer
       AED_REAL dHt;             // Change in thickness of the snow / ice layer
       AED_REAL RhoSnow;         // Density of snow layer (kg/m^3)
       AED_REAL dailyEvap;       // Daily Evaporation (m3/day)
       AED_REAL dailyRain;       // Daily Rain (m3/day)
       AED_REAL dailyRunoff;     // Daily Runoff (m3/day)
       AED_REAL dailySnow;       // Daily Snow (m3/day)
       AED_REAL dailyQsw;        // Daily Heat Flux (J/day)
       AED_REAL dailyQe;         // Daily Latent Heat(J/day)
       AED_REAL dailyQh;         // Daily Sensible Heat (J/day)
       AED_REAL dailyQlw;        // Daily Long Wave Radiation (J/day)
       AED_REAL dailyInflow;     // Total Daily Inflow (m3/day)
       AED_REAL dailyOutflow;    // Total Daily Outflow (m3/day)
       AED_REAL dailyOverflow;   // Total Daily Overflow (m3/day)
       AED_REAL albedo;          // Daily surface albedo
       AED_REAL dailyzonL;       // Daily atmospheric stability
   } SurfaceDataType;
   /*===========================================================*/
   // Structured type for Sediment Layer
   typedef struct  SedLayerType {
      AED_REAL depth;            // Layer height
      AED_REAL temp;             // Layer temperature
      AED_REAL vwc;
      AED_REAL wq;
   } SedLayerType;
   /*===========================================================*/
   // Structured type for iSediment Zones
   typedef struct ZoneType {
       AED_REAL zheight;
       AED_REAL zrad;
       AED_REAL zsalt;
       AED_REAL ztemp;
       AED_REAL zrho;
       AED_REAL zarea;
       AED_REAL zextc;
       AED_REAL zlayer_stress;
       AED_REAL ztss;
       AED_REAL zdz;
       AED_REAL zvel;
       AED_REAL zpar;
       AED_REAL znir;
       AED_REAL zuva;
       AED_REAL zuvb;
       AED_REAL zpres;
       AED_REAL zdepth;
       AED_REAL z_sed_zones;
       AED_REAL z_pc_wet;
       AED_REAL heatflux;
       int n_sed_layers;      // number of sediment layers
       SedLayerType *layers;
   } ZoneType;
   /*===========================================================*/
   // Structured type for Particle Transport Model (PTM)
   typedef struct ParticleDataType {
       int Status;          // indivdual particle status
       AED_REAL Height;
       AED_REAL Mass;
       AED_REAL Diam;
       AED_REAL Density;
       AED_REAL Velocity;
       AED_REAL vvel;
       int      Layer;
   } ParticleDataType;